--- a/index.html
+++ b/index.html
@@ -2,17 +2,82 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>curso de css</title>
+    <style media="screen">
+
+      .contente{ width: 80%;
+                padding: 0 10%;
+                float: left;
+                background: #ccc;
+                background-color: red;
+                background-image: url(https://www.google.com.br/search?q=praia&tbm=isch&hl=pt-BR&hl=pt-BR&tbs=isz%3Al&ved=0CAEQpwVqFwoTCMC53Ny5-ugCFQAAAAAdAAAAABAC&biw=1349&bih=657#imgrc=MdmqR0aEd_ir4M);
+                background-size: cover;
+                background-attachment: fixed;
+               }
+
+      .news{float: left;
+            background: rgba(255,255,255,0.5);
+            box-sizing:border-box;
+            padding:30px;
+            color:#000;
+            width: 22.75%;
+            -mox-box-sizing:border-box;
+            -web-kit-box-sizing: border-box;
+            box-sizing: border-box;
+            margin-right: 3px;
+            border: 25px solid #fff;
+            color: #fff;
+            color: #000;
+            }
+      .news:nth-of-type(4n+0){margin-right: 0;}
+
+
+    </style>
   </head>
   <body>
-    <article>
-      <header>
-        <h1>iniciando o curso de CSS</h1>
-        <p class="tagline" >vomos aprender o básico e o essencial em CSS!</p>
-      </header>
-      <p>Suspendisse a eros vitae purus pellentesque convallis. Vestibulum sed luctus eros, ut aliquam felis. Nullam ut lacus vitae nisl suscipit vulputate.</p>
-      <p>Etiam consectetur augue et turpis suscipit luctus. Suspendisse vestibulum tellus sed commodo varius. Donec commodo imperdiet accumsan.</p>
-      <p>Proin metus nunc, gravida et efficitur in, dignissim non augue.</p>
+    <div class="contente">
+
+      <article class="news">
+        <header>
+          <h1>iniciando com CSS</h1>
+          <p>camos aprender o básico e o essencial co o CSS!</p>
+        </header>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eget metus iaculis, varius felis eget, finibus urna. Aenean ultrices arcu odio, sed vulputate lorem suscipit nec</p>
+        <p>Proin semper elit ut ante porttitor, et varius mi blandit. Ut elit mauris, laoreet id porttitor eu, venenatis id quam. Praesent sapien odio, ullamcorper ac dictum sit amet, congue in urna</p>
+        <p>Maecenas rhoncus justo ipsum. Vestibulum faucibus nunc est. Pellentesque sit amet tristique mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent eu commodo justo, et sollicitudin magna.</p>
       </article>
+      <article class="news">
+        <header>
+          <h1>iniciando com CSS</h1>
+          <p>camos aprender o básico e o essencial co o CSS!</p>
+        </header>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eget metus iaculis, varius felis eget, finibus urna. Aenean ultrices arcu odio, sed vulputate lorem suscipit nec</p>
+        <p>Proin semper elit ut ante porttitor, et varius mi blandit. Ut elit mauris, laoreet id porttitor eu, venenatis id quam. Praesent sapien odio, ullamcorper ac dictum sit amet, congue in urna</p>
+        <p>Maecenas rhoncus justo ipsum. Vestibulum faucibus nunc est. Pellentesque sit amet tristique mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent eu commodo justo, et sollicitudin magna.</p>
+      </article>
+      <article class="news">
+        <header>
+          <h1>iniciando com CSS</h1>
+          <p>camos aprender o básico e o essencial co o CSS!</p>
+        </header>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eget metus iaculis, varius felis eget, finibus urna. Aenean ultrices arcu odio, sed vulputate lorem suscipit nec</p>
+        <p>Proin semper elit ut ante porttitor, et varius mi blandit. Ut elit mauris, laoreet id porttitor eu, venenatis id quam. Praesent sapien odio, ullamcorper ac dictum sit amet, congue in urna</p>
+        <p>Maecenas rhoncus justo ipsum. Vestibulum faucibus nunc est. Pellentesque sit amet tristique mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent eu commodo justo, et sollicitudin magna.</p>
+      </article>
+      <article class="news">
+        <header>
+          <h1>iniciando com CSS</h1>
+          <p>camos aprender o básico e o essencial co o CSS!</p>
+        </header>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eget metus iaculis, varius felis eget, finibus urna. Aenean ultrices arcu odio, sed vulputate lorem suscipit nec</p>
+        <p>Proin semper elit ut ante porttitor, et varius mi blandit. Ut elit mauris, laoreet id porttitor eu, venenatis id quam. Praesent sapien odio, ullamcorper ac dictum sit amet, congue in urna</p>
+        <p>Maecenas rhoncus justo ipsum. Vestibulum faucibus nunc est. Pellentesque sit amet tristique mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur   ridiculus mus. Praesent eu commodo justo, et sollicitudin magna.</p>
+      </article>
+
+      </div>
   </body>
 </html>
